--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 .principal {
-  background-image: url('../img/background.png');
+  background-image: url('../img/Background.png');
   background-size: contain;
   background-repeat: no-repeat;
   align-items: center;
